--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,11 @@
-@import "tailwindcss";
+@import 'tailwindcss';
+
+/* Custom Class */
+@layer utilities {
+  .font-arial {
+    font-family: Arial, Helvetica, sans-serif;
+  }
+}
 
 :root {
   --background: #ffffff;
@@ -8,19 +15,32 @@
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+}
+
+@theme {
+  --color-primary: #00a49f;
+  --color-secondary: #43006a;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #fff;
+    --foreground: #000;
   }
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-poppins), sans-serif;
+}
+
+/* Slick Carousel Bar Navigation */
+.slick-bar .slick-dots li {
+  width: 50px;
+  margin: 0 2px;
+}
+
+.slick-bar .slick-dots li.slick-active div {
+  background-color: #43006a;
 }
