--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -40,7 +40,21 @@ body {
   width: 50px;
   margin: 0 2px;
 }
-
 .slick-bar .slick-dots li.slick-active div {
   background-color: #43006a;
+}
+
+/* Team Carousel */
+.team-caousel .slick-dots {
+  width: auto;
+  left: 60px;
+}
+
+.team-caousel .slick-dots li {
+  width: auto;
+  height: auto;
+}
+
+.team-caousel .slick-dots li.slick-active div {
+  background: #00a49f;
 }
