Update - Blog Page - case study added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,10 @@ body {
   background-color: #43006a;
 }
 
+.slick-bar.case .slick-dots li.slick-active div {
+  background-color: #00a49f;
+}
+
 /* Team Carousel */
 .team-caousel .slick-dots {
   width: auto;
