--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,7 +69,6 @@ body {
 }
 
 /* For Rich Text */
-/* Rich Text */
 .richText {
   line-height: 1.6;
   margin-bottom: 2rem;
@@ -104,4 +103,42 @@ body {
 
 .richText a:hover {
   text-decoration: underline;
+}
+
+/* Modal */
+.ReactModal__Overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 9999 !important;
+  background: #0000005c !important;
+}
+
+.ReactModal__Content {
+  position: absolute;
+  border-radius: 25px !important;
+  max-height: 90vh;
+  height: 900px;
+  left: 50% !important;
+  top: 50% !important;
+  transform: translate(-50%, -50%);
+  width: 100%;
+  max-width: 1200px;
+  border: none !important;
+  padding-left: 30px !important;
+  padding-right: 30px !important;
+  z-index: 999 !important;
+  background: #fff;
+  overflow: auto !important;
+  scrollbar-width: none !important;
+}
+
+.ReactModal__Content::-webkit-scrollbar {
+  display: none !important;
+  -ms-overflow-style: none !important;
+}
+.ReactModal__Content::-webkit-scrollbar-thumb {
+  background-color: transparent !important;
 }
