--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -30,6 +30,12 @@
   }
 }
 
+.custom-gradient-bg {
+  @apply bg-no-repeat bg-cover;
+  background-image: linear-gradient(180deg, #3e0065 11.13%, rgba(62, 0, 101, 0) 35.42%),
+    linear-gradient(90deg, #3e0065 0%, rgba(120, 77, 147, 0.698936) 41.69%, rgba(255, 255, 255, 0) 100%);
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
