--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -164,3 +164,7 @@ body {
 .bpHeaderContainer {
   background-color: red !important;
 }
+
+/* Header image */
+@media screen and (min-width: 1200px) {
+}
