--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -168,3 +168,19 @@ body {
 /* Header image */
 @media screen and (min-width: 1200px) {
 }
+
+.perspective {
+  perspective: 1000px;
+}
+
+.transform-style {
+  transform-style: preserve-3d;
+}
+
+.backface-hidden {
+  backface-visibility: hidden;
+}
+
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
