--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -31,6 +31,14 @@
   }
 }
 
+h1 {
+  color: #00a49f !important;
+}
+
+h2 {
+  color: #43006a !important;
+}
+
 .custom-gradient-bg {
   @apply bg-no-repeat bg-cover;
   background-image: linear-gradient(180deg, #3e0065 11.13%, rgba(62, 0, 101, 0) 35.42%),
