Custom css for botpress added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -195,3 +195,9 @@ body {
 .rotate-y-180 {
   transform: rotateY(180deg);
 }
+
+/* Custom CSS For Botpress */
+
+.bpComposerPoweredBy {
+  display: none !important;
+}
