--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -196,4 +196,7 @@ body {
   transform: rotateY(180deg);
 }
 
-/* Custom CSS For Botpress */
+/* Custom CSS For Cookie */
+.cky-consent-container {
+  font-family: 'Inter', sans-serif !important;
+}
