cookie consent added

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,5 +198,5 @@ body {
 
 /* Custom CSS For Cookie */
 .cky-consent-container {
-  font-family: 'Inter', sans-serif !important;
+  font-family: 'Poppins', sans-serif !important;
 }
